fix: 랜덤 생성방식 수정